Fixed bug#11572 - Multiple responsive layout issues in AgentTicketCompose.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -368,8 +368,7 @@
     fieldset.TableLike > .Field > select,
     fieldset.TableLike > .Row > .Field > select,
     fieldset.TableLike > .Field > input,
-    fieldset.TableLike > .Row > .Field > input,
-    input#Subject {
+    fieldset.TableLike > .Row > .Field > input {
         padding: 3px;
         font-size: 0.9em;
         width: 93%;
@@ -409,6 +408,12 @@
     .BccCustomerContainer {
         width: auto;
         margin-top: 15px;
+    }
+
+    .LayoutPopup .CustomerContainer,
+    .LayoutPopup .CcCustomerContainer,
+    .LayoutPopup .BccCustomerContainer {
+        margin-left: 30px;
     }
 
     .ui-overlay-autocomplete li.ui-menu-item {
@@ -1023,8 +1028,7 @@
     }
 
     .LayoutPopup fieldset.TableLike > .Field > select,
-    .LayoutPopup fieldset.TableLike > .Row > .Field > select,
-    .LayoutPopup input#Subject {
+    .LayoutPopup fieldset.TableLike > .Row > .Field > select {
         width: auto;
     }
 
